2023/2/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\Github\Principle-of-Programming-Languages\2023\2\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'function'", "'readInteger'", 
                     "'printInteger'", "'readFloat'", "'writeFloat'", "'readBoolean'", 
                     "'printBoolean'", "'readString'", "'printString'", 
                     "'super'", "'preventDefault'", "'auto'", "'break'", 
                     "'do'", "'else'", "'for'", "'if'", "'return'", "'while'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "'boolean'", "'float'", "'integer'", "'string'", "'void'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'::'", "'>='", "'<='", "'='", "'>'", 
                     "'<'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", 
                     "','", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "MAIN", "FUNCTION", "READ_INTEGER", "PRINT_INTEGER", 
                      "READ_FLOAT", "WRITE_FLOAT", "READ_BOOLEAN", "PRINT_BOOLEAN", 
                      "READ_STRING", "PRINT_STRING", "SUPER", "PREVENT_DEFAULT", 
                      "AUTO", "BREAK", "DO", "ELSE", "FOR", "IF", "RETURN", 
                      "WHILE", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "BOOLEAN", "FLOAT", "INTEGER", "STRING", "VOID", "PLUSOP", 
                      "MINUSOP", "MULTIPLYOP", "DIVIDEOP", "MODULOOP", "NOTOP", 
                      "ANDOP", "OROP", "EQUALOP", "NOTEQUALOP", "DOUBLECOLONOP", 
                      "GTE", "LTE", "EQUAL", "GT", "LT", "LB", "RB", "LSB", 
                      "RSB", "LCB", "RCB", "DOT", "COMMA", "COLON", "SEMICOLON", 
                      "BOOLLIT", "VARIABLE_IDENTIFIERS", "FLOATLIT", "INTLIT", 
                      "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "WS", 
                      "BLOCK_CMT", "LINE_CMT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_main_function = 1
    RULE_function_declaration = 2
    RULE_inherit_function = 3
    RULE_param_list = 4
    RULE_param_list_no_empty = 5
    RULE_param = 6
    RULE_variable_declaration_no_init = 7
    RULE_variable_declaration_init = 8
    RULE_variable_declaration_init_list = 9
    RULE_assignment_statements = 10
    RULE_lhs = 11
    RULE_method_invocation_statements = 12
    RULE_read_integer_function = 13
    RULE_print_integer_function = 14
    RULE_read_float_function = 15
    RULE_write_float_function = 16
    RULE_read_boolean_function = 17
    RULE_print_boolean_function = 18
    RULE_read_string_function = 19
    RULE_print_string_function = 20
    RULE_super_function = 21
    RULE_prevent_default_function = 22
    RULE_if_statements = 23
    RULE_elseif_list_statements = 24
    RULE_elseif_statement = 25
    RULE_else_statement = 26
    RULE_for_statements = 27
    RULE_while_statements = 28
    RULE_do_while_statements = 29
    RULE_break_statements = 30
    RULE_continue_statements = 31
    RULE_return_expr = 32
    RULE_return_statements = 33
    RULE_return_nothing_statements = 34
    RULE_global_statements = 35
    RULE_global_statement = 36
    RULE_block_statements = 37
    RULE_block_statements_no_func_decl = 38
    RULE_statements = 39
    RULE_statement = 40
    RULE_statements_no_func_decl = 41
    RULE_statement_no_func_decl = 42
    RULE_statements_no_var_no_func = 43
    RULE_statement_no_var_no_func = 44
    RULE_in_loop_statement = 45
    RULE_expr_list = 46
    RULE_expr_list_no_empty = 47
    RULE_expr = 48
    RULE_expr1 = 49
    RULE_expr2 = 50
    RULE_expr3 = 51
    RULE_expr4 = 52
    RULE_expr5 = 53
    RULE_expr6 = 54
    RULE_expr7 = 55
    RULE_expr8 = 56
    RULE_expr9 = 57
    RULE_expr10 = 58
    RULE_expr8_func_call_name = 59
    RULE_array_init = 60
    RULE_array_lit = 61
    RULE_literal = 62
    RULE_all_type = 63
    RULE_all_type_no_void = 64
    RULE_array_type = 65
    RULE_integer_list_no_empty = 66
    RULE_atomic_types = 67
    RULE_variable_id_list = 68

    ruleNames =  [ "program", "main_function", "function_declaration", "inherit_function", 
                   "param_list", "param_list_no_empty", "param", "variable_declaration_no_init", 
                   "variable_declaration_init", "variable_declaration_init_list", 
                   "assignment_statements", "lhs", "method_invocation_statements", 
                   "read_integer_function", "print_integer_function", "read_float_function", 
                   "write_float_function", "read_boolean_function", "print_boolean_function", 
                   "read_string_function", "print_string_function", "super_function", 
                   "prevent_default_function", "if_statements", "elseif_list_statements", 
                   "elseif_statement", "else_statement", "for_statements", 
                   "while_statements", "do_while_statements", "break_statements", 
                   "continue_statements", "return_expr", "return_statements", 
                   "return_nothing_statements", "global_statements", "global_statement", 
                   "block_statements", "block_statements_no_func_decl", 
                   "statements", "statement", "statements_no_func_decl", 
                   "statement_no_func_decl", "statements_no_var_no_func", 
                   "statement_no_var_no_func", "in_loop_statement", "expr_list", 
                   "expr_list_no_empty", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "expr9", 
                   "expr10", "expr8_func_call_name", "array_init", "array_lit", 
                   "literal", "all_type", "all_type_no_void", "array_type", 
                   "integer_list_no_empty", "atomic_types", "variable_id_list" ]

    EOF = Token.EOF
    MAIN=1
    FUNCTION=2
    READ_INTEGER=3
    PRINT_INTEGER=4
    READ_FLOAT=5
    WRITE_FLOAT=6
    READ_BOOLEAN=7
    PRINT_BOOLEAN=8
    READ_STRING=9
    PRINT_STRING=10
    SUPER=11
    PREVENT_DEFAULT=12
    AUTO=13
    BREAK=14
    DO=15
    ELSE=16
    FOR=17
    IF=18
    RETURN=19
    WHILE=20
    OUT=21
    CONTINUE=22
    OF=23
    INHERIT=24
    ARRAY=25
    BOOLEAN=26
    FLOAT=27
    INTEGER=28
    STRING=29
    VOID=30
    PLUSOP=31
    MINUSOP=32
    MULTIPLYOP=33
    DIVIDEOP=34
    MODULOOP=35
    NOTOP=36
    ANDOP=37
    OROP=38
    EQUALOP=39
    NOTEQUALOP=40
    DOUBLECOLONOP=41
    GTE=42
    LTE=43
    EQUAL=44
    GT=45
    LT=46
    LB=47
    RB=48
    LSB=49
    RSB=50
    LCB=51
    RCB=52
    DOT=53
    COMMA=54
    COLON=55
    SEMICOLON=56
    BOOLLIT=57
    VARIABLE_IDENTIFIERS=58
    FLOATLIT=59
    INTLIT=60
    STRINGLIT=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    WS=64
    BLOCK_CMT=65
    LINE_CMT=66
    ERROR_CHAR=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_statements(self):
            return self.getTypedRuleContext(MT22Parser.Global_statementsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.global_statements()
            self.state = 139
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(MT22Parser.MAIN, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def block_statements(self):
            return self.getTypedRuleContext(MT22Parser.Block_statementsContext,0)


        def all_type(self):
            return self.getTypedRuleContext(MT22Parser.All_typeContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def inherit_function(self):
            return self.getTypedRuleContext(MT22Parser.Inherit_functionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_main_function




    def main_function(self):

        localctx = MT22Parser.Main_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MT22Parser.MAIN)
            self.state = 142
            self.match(MT22Parser.COLON)
            self.state = 143
            self.match(MT22Parser.FUNCTION)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 144
                self.all_type()
                pass

            elif la_ == 2:
                self.state = 145
                self.match(MT22Parser.VOID)
                pass


            self.state = 148
            self.match(MT22Parser.LB)
            self.state = 149
            self.param_list()
            self.state = 150
            self.match(MT22Parser.RB)
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.state = 151
                self.inherit_function()
                pass
            elif token in [MT22Parser.LCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 155
            self.block_statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_IDENTIFIERS(self):
            return self.getToken(MT22Parser.VARIABLE_IDENTIFIERS, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def block_statements(self):
            return self.getTypedRuleContext(MT22Parser.Block_statementsContext,0)


        def all_type(self):
            return self.getTypedRuleContext(MT22Parser.All_typeContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def inherit_function(self):
            return self.getTypedRuleContext(MT22Parser.Inherit_functionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_function_declaration




    def function_declaration(self):

        localctx = MT22Parser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MT22Parser.VARIABLE_IDENTIFIERS)
            self.state = 158
            self.match(MT22Parser.COLON)
            self.state = 159
            self.match(MT22Parser.FUNCTION)
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 160
                self.all_type()
                pass

            elif la_ == 2:
                self.state = 161
                self.match(MT22Parser.VOID)
                pass


            self.state = 164
            self.match(MT22Parser.LB)
            self.state = 165
            self.param_list()
            self.state = 166
            self.match(MT22Parser.RB)
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.state = 167
                self.inherit_function()
                pass
            elif token in [MT22Parser.LCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 171
            self.block_statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inherit_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def VARIABLE_IDENTIFIERS(self):
            return self.getToken(MT22Parser.VARIABLE_IDENTIFIERS, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_inherit_function




    def inherit_function(self):

        localctx = MT22Parser.Inherit_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inherit_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(MT22Parser.INHERIT)
            self.state = 174
            self.match(MT22Parser.VARIABLE_IDENTIFIERS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_list_no_empty(self):
            return self.getTypedRuleContext(MT22Parser.Param_list_no_emptyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_list




    def param_list(self):

        localctx = MT22Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param_list)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.VARIABLE_IDENTIFIERS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.param_list_no_empty()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_list_no_emptyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def param_list_no_empty(self):
            return self.getTypedRuleContext(MT22Parser.Param_list_no_emptyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_list_no_empty




    def param_list_no_empty(self):

        localctx = MT22Parser.Param_list_no_emptyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_list_no_empty)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.param()
                self.state = 181
                self.match(MT22Parser.COMMA)
                self.state = 182
                self.param_list_no_empty()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_IDENTIFIERS(self):
            return self.getToken(MT22Parser.VARIABLE_IDENTIFIERS, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def all_type(self):
            return self.getTypedRuleContext(MT22Parser.All_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.state = 187
                self.match(MT22Parser.INHERIT)
                pass
            elif token in [MT22Parser.OUT, MT22Parser.VARIABLE_IDENTIFIERS]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT]:
                self.state = 191
                self.match(MT22Parser.OUT)
                pass
            elif token in [MT22Parser.VARIABLE_IDENTIFIERS]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 195
            self.match(MT22Parser.VARIABLE_IDENTIFIERS)
            self.state = 196
            self.match(MT22Parser.COLON)
            self.state = 197
            self.all_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declaration_no_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_id_list(self):
            return self.getTypedRuleContext(MT22Parser.Variable_id_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def all_type_no_void(self):
            return self.getTypedRuleContext(MT22Parser.All_type_no_voidContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_variable_declaration_no_init




    def variable_declaration_no_init(self):

        localctx = MT22Parser.Variable_declaration_no_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_declaration_no_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.variable_id_list()
            self.state = 200
            self.match(MT22Parser.COLON)
            self.state = 201
            self.all_type_no_void()
            self.state = 202
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declaration_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_IDENTIFIERS(self):
            return self.getToken(MT22Parser.VARIABLE_IDENTIFIERS, 0)

        def variable_declaration_init_list(self):
            return self.getTypedRuleContext(MT22Parser.Variable_declaration_init_listContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_variable_declaration_init




    def variable_declaration_init(self):
